--- a/index.html
+++ b/index.html
@@ -3,49 +3,221 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Form Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Survey Form</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            width: 350px;
+        }
+        .container h2 {
+            text-align: center;
+            margin-bottom: 15px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .form-group input, .form-group select, .form-group textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        .form-group input[type="file"] {
+            padding: 5px;
+        }
+        .error {
+            color: red;
+            font-size: 12px;
+            margin-top: 5px;
+        }
+        .btn {
+            width: 100%;
+            background: #007bff;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .btn:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Fill in Your Details</h2>
-        <form id="myForm">
-            <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" required>
-            <span class="error" id="nameError"></span>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <span class="error" id="emailError"></span>
+<div class="container">
+    <h2>Survey Form</h2>
+    <form id="surveyForm">
+        <!-- Full Name -->
+        <div class="form-group">
+            <label for="name">Full Name</label>
+            <input type="text" id="name">
+            <div class="error" id="nameError"></div>
+        </div>
 
-            <label for="dob">Date of Birth:</label>
-            <input type="date" id="dob" name="dob" required>
-            <span class="error" id="dobError"></span>
+        <!-- Email -->
+        <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="email" id="email">
+            <div class="error" id="emailError"></div>
+        </div>
 
-            <label for="gender">Gender:</label>
-            <select id="gender" name="gender">
+        <!-- Age -->
+        <div class="form-group">
+            <label for="age">Age</label>
+            <input type="number" id="age">
+            <div class="error" id="ageError"></div>
+        </div>
+
+        <!-- Gender -->
+        <div class="form-group">
+            <label>Gender</label>
+            <select id="gender">
                 <option value="">Select</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="Other">Other</option>
+                <option value="Prefer not to say">Prefer not to say</option>
             </select>
-            <span class="error" id="genderError"></span>
+            <div class="error" id="genderError"></div>
+        </div>
 
-            <label>Hobbies:</label>
-            <input type="checkbox" name="hobby" value="sports"> Sports
-            <input type="checkbox" name="hobby" value="music"> Music
-            <input type="checkbox" name="hobby" value="reading"> Reading
+        <!-- Feedback -->
+        <div class="form-group">
+            <label for="feedback">Feedback (Optional)</label>
+            <textarea id="feedback" rows="3"></textarea>
+        </div>
 
-            <label>Choose Plan:</label>
-            <input type="radio" name="plan" value="basic"> Basic
-            <input type="radio" name="plan" value="premium"> Premium
-            <span class="error" id="planError"></span>
+        <!-- Date of Birth -->
+        <div class="form-group">
+            <label for="dob">Date of Birth</label>
+            <input type="date" id="dob">
+            <div class="error" id="dobError"></div>
+        </div>
 
-            <button type="submit">Submit</button>
-        </form>
-        <p id="successMessage" class="success"></p>
-    </div>
+        <!-- Recommendation -->
+        <div class="form-group">
+            <label>Would you recommend our product?</label>
+            <input type="checkbox" id="recommend">
+            <span>Yes</span>
+            <div class="error" id="recommendError"></div>
+        </div>
 
-    <script src="script.js"></script>
+        <!-- Feedback Rating -->
+        <div class="form-group">
+            <label for="rating">Feedback Rating (1-10)</label>
+            <input type="number" id="rating" min="1" max="10">
+            <div class="error" id="ratingError"></div>
+        </div>
+
+        <!-- File Upload -->
+        <div class="form-group">
+            <label for="file">Upload a File (Optional, max 10MB, images only)</label>
+            <input type="file" id="file" accept="image/*">
+            <div class="error" id="fileError"></div>
+        </div>
+
+        <button type="submit" class="btn">Submit</button>
+    </form>
+</div>
+
+<script>
+    document.getElementById("surveyForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        let isValid = true;
+
+        // Clear previous errors
+        document.querySelectorAll(".error").forEach(el => el.textContent = "");
+
+        const name = document.getElementById("name").value.trim();
+        const email = document.getElementById("email").value.trim();
+        const age = document.getElementById("age").value.trim();
+        const gender = document.getElementById("gender").value;
+        const dob = document.getElementById("dob").value;
+        const recommend = document.getElementById("recommend").checked;
+        const rating = document.getElementById("rating").value;
+        const file = document.getElementById("file").files[0];
+
+        // Full Name validation
+        if (name.length < 3) {
+            document.getElementById("nameError").textContent = "Name must be at least 3 characters";
+            isValid = false;
+        }
+
+        // Email validation
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        if (!emailRegex.test(email)) {
+            document.getElementById("emailError").textContent = "Invalid email format";
+            isValid = false;
+        }
+
+        // Age validation
+        if (age < 18 || age > 100 || isNaN(age)) {
+            document.getElementById("ageError").textContent = "Age must be between 18 and 100";
+            isValid = false;
+        }
+
+        // Gender validation
+        if (!gender) {
+            document.getElementById("genderError").textContent = "Please select a gender";
+            isValid = false;
+        }
+
+        // Date of Birth validation
+        const birthDate = new Date(dob);
+        const today = new Date();
+        const ageCheck = today.getFullYear() - birthDate.getFullYear();
+        if (ageCheck < 18 || dob === "") {
+            document.getElementById("dobError").textContent = "You must be at least 18 years old";
+            isValid = false;
+        }
+
+        // Recommendation validation
+        if (!recommend) {
+            document.getElementById("recommendError").textContent = "Please check this box";
+            isValid = false;
+        }
+
+        // Rating validation
+        if (rating < 1 || rating > 10 || isNaN(rating)) {
+            document.getElementById("ratingError").textContent = "Rating must be between 1 and 10";
+            isValid = false;
+        }
+
+        // File validation
+        if (file) {
+            if (file.size > 10 * 1024 * 1024) {
+                document.getElementById("fileError").textContent = "File must be less than 10MB";
+                isValid = false;
+            }
+        }
+
+        if (isValid) {
+            alert("Form submitted successfully!");
+            document.getElementById("surveyForm").reset();
+        }
+    });
+</script>
+
 </body>
 </html>
