--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation</title>
+    <title>Survey Form</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            width: 350px;
         }
         .container h2 {
             text-align: center;
@@ -32,20 +32,21 @@
             font-weight: bold;
             margin-bottom: 5px;
         }
-        .form-group input {
+        .form-group input, .form-group select, .form-group textarea {
             width: 100%;
             padding: 8px;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 14px;
         }
-        .form-group input:focus {
-            border-color: #007bff;
+        .form-group input[type="file"] {
+            padding: 5px;
         }
         .error {
             color: red;
             font-size: 12px;
             margin-top: 5px;
+            display: none;
         }
         .btn {
             width: 100%;
@@ -65,84 +66,135 @@
 <body>
 
 <div class="container">
-    <h2>Sign Up</h2>
-    <form id="signupForm">
+    <h2>Survey Form</h2>
+    <form id="surveyForm">
+        <!-- Full Name -->
         <div class="form-group">
             <label for="name">Full Name</label>
             <input type="text" id="name">
-            <div class="error" id="nameError"></div>
+            <div class="error" id="nameError">Name must be at least 3 characters</div>
         </div>
+
+        <!-- Email -->
         <div class="form-group">
-            <label for="email">Email</label>
+            <label for="email">Email Address</label>
             <input type="email" id="email">
-            <div class="error" id="emailError"></div>
+            <div class="error" id="emailError">Invalid email format</div>
         </div>
+
+        <!-- Age -->
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password">
-            <div class="error" id="passwordError"></div>
+            <label for="age">Age</label>
+            <input type="number" id="age">
+            <div class="error" id="ageError">Age must be between 18 and 100</div>
         </div>
+
+        <!-- Gender -->
         <div class="form-group">
-            <label for="confirmPassword">Confirm Password</label>
-            <input type="password" id="confirmPassword">
-            <div class="error" id="confirmPasswordError"></div>
+            <label>Gender</label>
+            <select id="gender">
+                <option value="">Select</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="Other">Other</option>
+                <option value="Prefer not to say">Prefer not to say</option>
+            </select>
+            <div class="error" id="genderError">Please select a gender</div>
         </div>
-        <button type="submit" class="btn">Register</button>
+
+        <!-- Feedback -->
+        <div class="form-group">
+            <label for="feedback">Feedback (Optional)</label>
+            <textarea id="feedback" rows="3"></textarea>
+        </div>
+
+        <!-- Date of Birth -->
+        <div class="form-group">
+            <label for="dob">Date of Birth</label>
+            <input type="date" id="dob">
+            <div class="error" id="dobError">You must be at least 18 years old</div>
+        </div>
+
+        <!-- Recommendation -->
+        <div class="form-group">
+            <label>Would you recommend our product?</label>
+            <input type="checkbox" id="recommend">
+            <span>Yes</span>
+            <div class="error" id="recommendError">Please check this box</div>
+        </div>
+
+        <!-- Feedback Rating -->
+        <div class="form-group">
+            <label for="rating">Feedback Rating (1-10)</label>
+            <input type="number" id="rating" min="1" max="10">
+            <div class="error" id="ratingError">Rating must be between 1 and 10</div>
+        </div>
+
+        <!-- File Upload -->
+        <div class="form-group">
+            <label for="file">Upload a File (Optional, max 10MB, images only)</label>
+            <input type="file" id="file" accept="image/*">
+            <div class="error" id="fileError">File must be less than 10MB</div>
+        </div>
+
+        <button type="submit" class="btn">Submit</button>
     </form>
 </div>
 
 <script>
-    document.getElementById("signupForm").addEventListener("submit", function (e) {
-        e.preventDefault();
-
-        let isValid = true;
-
-        // Clear previous errors
-        document.querySelectorAll(".error").forEach(el => el.textContent = "");
-
-        const name = document.getElementById("name").value.trim();
-        const email = document.getElementById("email").value.trim();
-        const password = document.getElementById("password").value.trim();
-        const confirmPassword = document.getElementById("confirmPassword").value.trim();
-
-        // Name validation
-        if (name === "") {
-            document.getElementById("nameError").textContent = "Name is required";
-            isValid = false;
+    function validateField(input, errorId, condition) {
+        const errorElement = document.getElementById(errorId);
+        if (condition) {
+            errorElement.style.display = "none";
+        } else {
+            errorElement.style.display = "block";
         }
+    }
 
-        // Email validation
+    document.getElementById("name").addEventListener("input", function () {
+        validateField(this, "nameError", this.value.trim().length >= 3);
+    });
+
+    document.getElementById("email").addEventListener("input", function () {
         const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-        if (email === "") {
-            document.getElementById("emailError").textContent = "Email is required";
-            isValid = false;
-        } else if (!emailRegex.test(email)) {
-            document.getElementById("emailError").textContent = "Invalid email format";
-            isValid = false;
-        }
+        validateField(this, "emailError", emailRegex.test(this.value.trim()));
+    });
 
-        // Password validation
-        if (password === "") {
-            document.getElementById("passwordError").textContent = "Password is required";
-            isValid = false;
-        } else if (password.length < 6) {
-            document.getElementById("passwordError").textContent = "Password must be at least 6 characters";
-            isValid = false;
-        }
+    document.getElementById("age").addEventListener("input", function () {
+        validateField(this, "ageError", this.value >= 18 && this.value <= 100);
+    });
 
-        // Confirm password validation
-        if (confirmPassword === "") {
-            document.getElementById("confirmPasswordError").textContent = "Confirm Password is required";
-            isValid = false;
-        } else if (password !== confirmPassword) {
-            document.getElementById("confirmPasswordError").textContent = "Passwords do not match";
-            isValid = false;
-        }
+    document.getElementById("gender").addEventListener("change", function () {
+        validateField(this, "genderError", this.value !== "");
+    });
 
-        // Submit if valid
-        if (isValid) {
+    document.getElementById("dob").addEventListener("input", function () {
+        const birthDate = new Date(this.value);
+        const today = new Date();
+        const ageCheck = today.getFullYear() - birthDate.getFullYear();
+        validateField(this, "dobError", ageCheck >= 18);
+    });
+
+    document.getElementById("recommend").addEventListener("change", function () {
+        validateField(this, "recommendError", this.checked);
+    });
+
+    document.getElementById("rating").addEventListener("input", function () {
+        validateField(this, "ratingError", this.value >= 1 && this.value <= 10);
+    });
+
+    document.getElementById("file").addEventListener("change", function () {
+        const file = this.files[0];
+        validateField(this, "fileError", !file || file.size <= 10 * 1024 * 1024);
+    });
+
+    document.getElementById("surveyForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+        if (document.querySelectorAll(".error[style='display: block;']").length === 0) {
             alert("Form submitted successfully!");
-            document.getElementById("signupForm").reset();
+            this.reset();
+        } else {
+            alert("Please fix errors before submitting.");
         }
     });
 </script>
