--- a/index.html
+++ b/index.html
@@ -1,99 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Survey Form</title>
     <style>
+        /* Reset some default margins/paddings */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #e9ecef;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
+            padding: 20px;
         }
+
         .container {
             background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 350px;
+            padding: 30px 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 500px;
         }
+
         .container h2 {
             text-align: center;
-            margin-bottom: 15px;
+            margin-bottom: 25px;
+            color: #333;
         }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
         .form-group {
+            display: flex;
+            flex-direction: column;
             margin-bottom: 15px;
         }
+
         .form-group label {
-            display: block;
-            font-weight: bold;
+            font-weight: 600;
             margin-bottom: 5px;
+            color: #555;
         }
-        .form-group input, .form-group select, .form-group textarea {
-            width: 100%;
-            padding: 8px;
+
+        .form-group input,
+        .form-group select,
+        .form-group textarea {
+            padding: 10px;
+            font-size: 14px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            font-size: 14px;
+            transition: border 0.3s ease;
         }
-        .form-group input[type="file"] {
-            padding: 5px;
+
+        .form-group input:focus,
+        .form-group select:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #007bff;
         }
+
+        .form-group input[type="checkbox"] {
+            width: auto;
+            margin-right: 10px;
+        }
+
         .error {
-            color: red;
+            color: #d9534f;
             font-size: 12px;
             margin-top: 5px;
             display: none;
         }
+
         .btn {
-            width: 100%;
             background: #007bff;
-            color: white;
-            padding: 10px;
+            color: #fff;
             border: none;
+            padding: 12px;
             border-radius: 5px;
-            cursor: pointer;
             font-size: 16px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+            margin-top: 10px;
         }
+
         .btn:hover {
             background: #0056b3;
+        }
+
+        /* Modal Popup Styles */
+        .popup {
+            display: none; /* Hidden by default */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .popup-content {
+            background-color: #fff;
+            padding: 20px 30px;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 350px;
+            position: relative;
+            text-align: center;
+        }
+
+        .popup-content p {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 24px;
+            cursor: pointer;
+            color: #aaa;
+        }
+
+        .close:hover {
+            color: #000;
         }
     </style>
 </head>
 <body>
-
 <div class="container">
     <h2>Survey Form</h2>
     <form id="surveyForm">
         <!-- Full Name -->
         <div class="form-group">
             <label for="name">Full Name</label>
-            <input type="text" id="name">
+            <input type="text" id="name" placeholder="Enter your name"/>
             <div class="error" id="nameError">Name must be at least 3 characters</div>
         </div>
 
         <!-- Email -->
         <div class="form-group">
             <label for="email">Email Address</label>
-            <input type="email" id="email">
+            <input type="email" id="email" placeholder="example@mail.com"/>
             <div class="error" id="emailError">Invalid email format</div>
         </div>
 
         <!-- Age -->
         <div class="form-group">
             <label for="age">Age</label>
-            <input type="number" id="age">
+            <input type="number" id="age" placeholder="Enter your age"/>
             <div class="error" id="ageError">Age must be between 18 and 100</div>
         </div>
 
         <!-- Gender -->
         <div class="form-group">
-            <label>Gender</label>
+            <label for="gender">Gender</label>
             <select id="gender">
-                <option value="">Select</option>
+                <option value="">Select Gender</option>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
                 <option value="Other">Other</option>
@@ -105,35 +183,33 @@
         <!-- Feedback -->
         <div class="form-group">
             <label for="feedback">Feedback (Optional)</label>
-            <textarea id="feedback" rows="3"></textarea>
+            <textarea id="feedback" rows="3" placeholder="Your feedback"></textarea>
         </div>
 
         <!-- Date of Birth -->
         <div class="form-group">
             <label for="dob">Date of Birth</label>
-            <input type="date" id="dob">
+            <input type="date" id="dob"/>
             <div class="error" id="dobError">You must be at least 18 years old</div>
         </div>
 
-        <!-- Recommendation -->
-        <div class="form-group">
-            <label>Would you recommend our product?</label>
-            <input type="checkbox" id="recommend">
-            <span>Yes</span>
-            <div class="error" id="recommendError">Please check this box</div>
+        <!-- Recommendation (Optional) -->
+        <div class="form-group" style="flex-direction: row; align-items: center;">
+            <input type="checkbox" id="recommend"/>
+            <label for="recommend" style="margin: 0;">Would you recommend our product?</label>
         </div>
 
         <!-- Feedback Rating -->
         <div class="form-group">
             <label for="rating">Feedback Rating (1-10)</label>
-            <input type="number" id="rating" min="1" max="10">
+            <input type="number" id="rating" min="1" max="10" placeholder="Enter a rating"/>
             <div class="error" id="ratingError">Rating must be between 1 and 10</div>
         </div>
 
         <!-- File Upload -->
         <div class="form-group">
             <label for="file">Upload a File (Optional, max 10MB, images only)</label>
-            <input type="file" id="file" accept="image/*">
+            <input type="file" id="file" accept="image/*"/>
             <div class="error" id="fileError">File must be less than 10MB</div>
         </div>
 
@@ -141,63 +217,140 @@
     </form>
 </div>
 
+<!-- Modal Popup -->
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <span class="close" id="closePopup">&times;</span>
+        <p>Form submitted successfully!</p>
+    </div>
+</div>
+
 <script>
+    // Helper function for real-time field validation
     function validateField(input, errorId, condition) {
         const errorElement = document.getElementById(errorId);
-        if (condition) {
-            errorElement.style.display = "none";
-        } else {
-            errorElement.style.display = "block";
-        }
+        errorElement.style.display = condition ? "none" : "block";
     }
 
+    // Real-time validations on input/change events
     document.getElementById("name").addEventListener("input", function () {
         validateField(this, "nameError", this.value.trim().length >= 3);
     });
-
     document.getElementById("email").addEventListener("input", function () {
         const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
         validateField(this, "emailError", emailRegex.test(this.value.trim()));
     });
-
     document.getElementById("age").addEventListener("input", function () {
         validateField(this, "ageError", this.value >= 18 && this.value <= 100);
     });
-
     document.getElementById("gender").addEventListener("change", function () {
         validateField(this, "genderError", this.value !== "");
     });
-
     document.getElementById("dob").addEventListener("input", function () {
         const birthDate = new Date(this.value);
         const today = new Date();
         const ageCheck = today.getFullYear() - birthDate.getFullYear();
-        validateField(this, "dobError", ageCheck >= 18);
+        validateField(this, "dobError", !isNaN(birthDate.getTime()) && ageCheck >= 18);
     });
-
-    document.getElementById("recommend").addEventListener("change", function () {
-        validateField(this, "recommendError", this.checked);
-    });
-
     document.getElementById("rating").addEventListener("input", function () {
         validateField(this, "ratingError", this.value >= 1 && this.value <= 10);
     });
-
     document.getElementById("file").addEventListener("change", function () {
         const file = this.files[0];
         validateField(this, "fileError", !file || file.size <= 10 * 1024 * 1024);
     });
 
+    // Full validation on form submission
     document.getElementById("surveyForm").addEventListener("submit", function (e) {
         e.preventDefault();
-        if (document.querySelectorAll(".error[style='display: block;']").length === 0) {
-            alert("Form submitted successfully!");
-            this.reset();
+        let valid = true;
+
+        // Name Validation
+        const nameInput = document.getElementById("name");
+        if (nameInput.value.trim().length < 3) {
+            document.getElementById("nameError").style.display = "block";
+            valid = false;
         } else {
-            alert("Please fix errors before submitting.");
+            document.getElementById("nameError").style.display = "none";
+        }
+
+        // Email Validation
+        const emailInput = document.getElementById("email");
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        if (!emailRegex.test(emailInput.value.trim())) {
+            document.getElementById("emailError").style.display = "block";
+            valid = false;
+        } else {
+            document.getElementById("emailError").style.display = "none";
+        }
+
+        // Age Validation
+        const ageInput = document.getElementById("age");
+        if (ageInput.value < 18 || ageInput.value > 100) {
+            document.getElementById("ageError").style.display = "block";
+            valid = false;
+        } else {
+            document.getElementById("ageError").style.display = "none";
+        }
+
+        // Gender Validation
+        const genderInput = document.getElementById("gender");
+        if (genderInput.value === "") {
+            document.getElementById("genderError").style.display = "block";
+            valid = false;
+        } else {
+            document.getElementById("genderError").style.display = "none";
+        }
+
+        // Date of Birth Validation
+        const dobInput = document.getElementById("dob");
+        const birthDate = new Date(dobInput.value);
+        const today = new Date();
+        const ageCheck = today.getFullYear() - birthDate.getFullYear();
+        if (!dobInput.value || isNaN(birthDate.getTime()) || ageCheck < 18) {
+            document.getElementById("dobError").style.display = "block";
+            valid = false;
+        } else {
+            document.getElementById("dobError").style.display = "none";
+        }
+
+        // Feedback Rating Validation
+        const ratingInput = document.getElementById("rating");
+        if (ratingInput.value < 1 || ratingInput.value > 10) {
+            document.getElementById("ratingError").style.display = "block";
+            valid = false;
+        } else {
+            document.getElementById("ratingError").style.display = "none";
+        }
+
+        // File Upload Validation (Optional)
+        const fileInput = document.getElementById("file");
+        const file = fileInput.files[0];
+        if (file && file.size > 10 * 1024 * 1024) {
+            document.getElementById("fileError").style.display = "block";
+            valid = false;
+        } else {
+            document.getElementById("fileError").style.display = "none";
+        }
+
+        // If all validations pass, show the modal pop-up; otherwise, do nothing.
+        if (valid) {
+            document.getElementById("popup").style.display = "flex";
+            this.reset();
+        }
+    });
+
+    // Close modal when the user clicks on the close button
+    document.getElementById("closePopup").addEventListener("click", function () {
+        document.getElementById("popup").style.display = "none";
+    });
+
+    // Close modal when the user clicks outside the modal content
+    window.addEventListener("click", function (event) {
+        if (event.target === document.getElementById("popup")) {
+            document.getElementById("popup").style.display = "none";
         }
     });
 </script>
-
 </body>
 </html>
